Correct z-index widget Add To cart

--- a/src/app/pages/catalog-products/components/list/list.component.scss
+++ b/src/app/pages/catalog-products/components/list/list.component.scss
@@ -68,6 +68,7 @@ button {
         width: 15rem;
         padding: 1rem;
         margin-top: -20px;
+        z-index: 1;
         .controlsAddWidgetProduct{
           display: grid;
           grid-template-columns: 10% 80% 10%;
